--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -56,8 +56,13 @@ $headerHeight: 70px;
             }
         }   
         &__right{
-            a{
+            .navbar-link{
                 color: $main-color;
+            }
+            .navbar-dropdown{
+                .navbar-item, .navbar-item a{
+                    color: $black;
+                }
             }
         }
     }
