--- a/src/styles/global/_config.scss
+++ b/src/styles/global/_config.scss
@@ -31,6 +31,10 @@ a{
     pointer-events: none;
 }
 
+
+hr.black{
+    background-color: $black;
+}
 // .hr_mobile{
 //     margin: 5px 0 20px;
 // }
