--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,6 +7,7 @@
 @import "components/footer";
 @import "components/flyer";
 @import "components/event";
+@import "components/comments";
 
 
 .section__container{
