--- a/src/styles/global/_variables.scss
+++ b/src/styles/global/_variables.scss
@@ -2,5 +2,5 @@
 $main-color: #ffe200;
 $black: #0b122f;
 $font_principal: 'Roboto', sans-serif;
-$font_titles: 'Montserrat', cursive;
+$font_titles: 'Quicksand', cursive;
 
