--- a/src/styles/components/_comments.scss
+++ b/src/styles/components/_comments.scss
@@ -13,25 +13,42 @@
             border: 1px solid #f1f1f1;
             box-shadow: 0 2px 2px rgba(0,0,0,0.05);        
             &__user{
-                width: 60px;
+                width: 75px;
                 &__wrapper{
                     width: 100%;
                     &__avatar{
-                        width: 100%;
+                        width: 70px;
+                        margin: 0 auto;
                         overflow: hidden;
                         border-radius: 50%;
-                        padding-bottom: 100%;
+                        padding-bottom: 70px;
                         background: center center no-repeat;
                         background-size: cover;
+                        &.letter{
+                            position: relative;
+                            text-align: center;
+                            background: #eaeaea; 
+                            p{
+                                top:50%;
+                                left: 50%;
+                                margin: 0;
+                                font-size: 40px;
+                                margin-top: -5%;
+                                font-weight: bold;
+                                position: absolute;
+                                transform: translate(-50%, -50%);
+                            }
+                        }
                     }
                     &__username{
+                        font-size: 12px;
                         font-weight: bold;
                         text-align: center;
                     }
                 }
             }
             &__comment{
-                margin-left: 25px;
+                margin-left: 20px;
             }
             &:nth-of-type(2n){
                 background: #fbfbfb;
