--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Montserrat:500,900|Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Quicksand:700|Roboto&display=swap");
 .select:not(.is-multiple):not(.is-loading)::after {
   border-color: #0b122f;
 }
@@ -31,8 +31,7 @@ body * {
 }
 
 h1 {
-  letter-spacing: 2px;
-  font-family: "Montserrat", cursive;
+  font-family: "Quicksand", cursive;
 }
 
 a {
@@ -53,6 +52,32 @@ a {
 
 hr.black {
   background-color: #0b122f;
+}
+
+.navbar-burger {
+  color: #ffe200;
+}
+
+.navbar-burger:hover {
+  color: #ffe200;
+}
+
+@media (max-width: 768px) {
+  .container {
+    overflow: hidden;
+  }
+  .mobile_full_width {
+    width: 100%;
+  }
+  .mobile_margin_top_20 {
+    margin-top: 20px;
+  }
+  .mobile_helper {
+    padding: 0 20px;
+  }
+  .breadcrumb {
+    margin-top: 10px;
+  }
 }
 
 .header__fix {
@@ -91,6 +116,15 @@ hr.black {
   height: 70px;
 }
 
+@media (max-width: 768px) {
+  .header__fix__left {
+    height: 60px;
+  }
+  .header__fix__left .level-item {
+    margin-bottom: 0;
+  }
+}
+
 .header__fix__left p {
   margin-right: 15px;
   display: inline-block;
@@ -101,9 +135,22 @@ hr.black {
   margin-right: 30px;
 }
 
+@media (max-width: 768px) {
+  .header__fix__left p:first-of-type {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+}
+
 .header__fix__left p.logo img {
   max-height: 40px;
   display: block;
+}
+
+@media (max-width: 768px) {
+  .header__fix__left p.logo img {
+    max-height: 30px;
+  }
 }
 
 .header__fix__left p a {
@@ -135,9 +182,23 @@ hr.black {
   color: #0b122f;
 }
 
+.header__fix__right .mobile_abolute {
+  left: 0;
+  right: 0;
+  position: fixed;
+  background: #FFF;
+  top: 60px;
+}
+
 .header__space {
   width: 100%;
   height: 70px;
+}
+
+@media (max-width: 768px) {
+  .header__space {
+    height: 60px;
+  }
 }
 
 .footer {
@@ -191,7 +252,7 @@ hr.black {
   top: 15px;
   right: 15px;
   position: absolute;
-  font-family: "Montserrat", cursive;
+  font-family: "Quicksand", cursive;
   text-transform: capitalize;
   text-shadow: 0 0 5px black;
 }
@@ -261,14 +322,15 @@ hr.black {
 
 @media (max-width: 768px) {
   .flyer {
+    padding: 0;
     background: none !important;
-    padding: 0 10px;
   }
   .flyer a {
     position: static;
   }
   .flyer .flyer__content__date, .flyer .flyer__content {
     color: #0b122f;
+    padding: 0 20px;
     position: static;
   }
   .flyer .flyer__content__date {
@@ -291,8 +353,15 @@ hr.black {
   text-align: center;
 }
 
+@media (max-width: 768px) {
+  .flyer__full_width_text p {
+    font-size: 2rem;
+    line-height: 120%;
+  }
+}
+
 .flyers__title {
-  font-family: "Montserrat", cursive;
+  font-family: "Quicksand", cursive;
 }
 
 .flyers__filter > span {
@@ -449,7 +518,7 @@ hr.black {
 }
 
 .event__comments__list__single__user {
-  width: 60px;
+  width: 75px;
 }
 
 .event__comments__list__single__user__wrapper {
@@ -457,28 +526,129 @@ hr.black {
 }
 
 .event__comments__list__single__user__wrapper__avatar {
-  width: 100%;
+  width: 70px;
+  margin: 0 auto;
   overflow: hidden;
   border-radius: 50%;
-  padding-bottom: 100%;
+  padding-bottom: 70px;
   background: center center no-repeat;
   background-size: cover;
 }
 
+.event__comments__list__single__user__wrapper__avatar.letter {
+  position: relative;
+  text-align: center;
+  background: #eaeaea;
+}
+
+.event__comments__list__single__user__wrapper__avatar.letter p {
+  top: 50%;
+  left: 50%;
+  margin: 0;
+  font-size: 40px;
+  margin-top: -5%;
+  font-weight: bold;
+  position: absolute;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
 .event__comments__list__single__user__wrapper__username {
+  font-size: 12px;
   font-weight: bold;
   text-align: center;
 }
 
 .event__comments__list__single__comment {
-  margin-left: 25px;
+  margin-left: 20px;
 }
 
 .event__comments__list__single:nth-of-type(2n) {
   background: #fbfbfb;
 }
 
+.new__carousel {
+  margin-top: 20px;
+}
+
+.new__carousel__list {
+  height: 400px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  background: #000;
+}
+
+.new__carousel__list__image img {
+  height: 400px;
+  display: block;
+  width: auto !important;
+}
+
+@media (max-width: 768px) {
+  .new__carousel__list__image img {
+    height: auto;
+  }
+}
+
+.new__carousel__list__content {
+  left: 30px;
+  right: 30px;
+  z-index: 3;
+  bottom: 20px;
+  color: #FFF;
+  position: absolute;
+}
+
+.new__carousel__list__content h2 {
+  font-size: 24px;
+  margin-bottom: 20px;
+  text-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+  font-family: "Quicksand", cursive;
+}
+
+.new__carousel__list:before {
+  z-index: 2;
+  content: '';
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 50%;
+  position: absolute;
+  background: black;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), to(black));
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, black 100%);
+}
+
+.news__single__wrapper {
+  width: 100%;
+  max-width: 600px;
+  padding: 0 20px;
+  margin: 20px auto 0;
+}
+
+.news__single__wrapper img {
+  display: block;
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 10px;
+  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+.news__single__content {
+  margin-top: 20px;
+}
+
+.news__single__share {
+  margin-top: 20px;
+  padding-top: 20px;
+  border-top: 1px solid #0b122f;
+}
+
 .section__container {
+  overflow: hidden;
   margin-top: 20px;
 }
 
@@ -500,6 +670,13 @@ hr.black {
 
 .hero .hero-body .container h1 {
   font-size: 4rem;
+}
+
+@media (max-width: 768px) {
+  .hero .hero-body .container h1 {
+    font-size: 2.5rem;
+    line-height: 125%;
+  }
 }
 
 .hero .hero-body .container h1, .hero .hero-body .container h2, .hero .hero-body .container p {
