--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:500,900|Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Quicksand:700|Roboto&display=swap');
 @import "global/variables";
 @import "global/reset";
 @import "global/config";
@@ -8,9 +8,11 @@
 @import "components/flyer";
 @import "components/event";
 @import "components/comments";
+@import "components/news";
 
 
 .section__container{
+    overflow: hidden;
     margin-top: 20px;
 }
 
@@ -29,6 +31,11 @@
         .container{
             h1{
                 font-size: 4rem;
+
+                @media (max-width: 768px) {
+                    font-size: 2.5rem;
+                    line-height: 125%;
+                }
             }
             h1, h2, p{
                 color: $black !important;
