Arreglos para iPhone

--- a/src/styles/components/_event.scss
+++ b/src/styles/components/_event.scss
@@ -23,6 +23,7 @@
         .address{
             width: 100%;
             display: block;
+            margin-top: 20px;
         }
         &__metadata{
             width: 100%;
