--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -58,32 +58,30 @@
 }
 
 
-.datepicker{
-    .vue-input{
-        -webkit-appearance: none;
-        align-items: center;
-        border: 1px solid transparent;
-        border-radius: 4px;
-        box-shadow: none;
-        display: inline-flex;
-        font-size: 1rem;
-        height: 2.25em;
-        justify-content: flex-start;
-        line-height: 1.5;
-        padding-bottom: calc(.375em - 1px);
-        padding-left: calc(.625em - 1px);
-        padding-right: calc(.625em - 1px);
-        padding-top: calc(.375em - 1px);
-        position: relative;
-        vertical-align: top;
-        background-color: #fff;
-        border-color: #dbdbdb;
-        border-radius: 4px;
-        color: #363636;
-        box-shadow: inset 0 1px 2px rgba(10,10,10,.1);
-        max-width: 100%;
-        width: 100%;
-    }
+.vdp-datepicker input{
+    -webkit-appearance: none;
+    align-items: center;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    box-shadow: none;
+    display: inline-flex;
+    font-size: 1rem;
+    height: 2.25em;
+    justify-content: flex-start;
+    line-height: 1.5;
+    padding-bottom: calc(.375em - 1px);
+    padding-left: calc(.625em - 1px);
+    padding-right: calc(.625em - 1px);
+    padding-top: calc(.375em - 1px);
+    position: relative;
+    vertical-align: top;
+    background-color: #fff;
+    border-color: #dbdbdb;
+    border-radius: 4px;
+    color: #363636;
+    box-shadow: inset 0 1px 2px rgba(10,10,10,.1);
+    max-width: 100%;
+    width: 100%;
 }
 
 .address_suggestions{
