--- a/src/styles/global/_config.scss
+++ b/src/styles/global/_config.scss
@@ -63,7 +63,9 @@ hr.black{
     }
 }
 
-
+.ql-toolbar .ql-formats .ql-image {
+    display: none;
+  }
 
 // .hr_mobile{
 //     margin: 5px 0 20px;
