--- a/src/styles/global/_config.scss
+++ b/src/styles/global/_config.scss
@@ -55,6 +55,9 @@ hr.black{
     .mobile_margin_top_20{
         margin-top: 20px;
     }
+    .mobile_margin_top_10{
+        margin-top: 10px;
+    }
     .mobile_helper{
         padding: 0 20px;
     }
