--- a/src/styles/components/_event.scss
+++ b/src/styles/components/_event.scss
@@ -6,6 +6,7 @@
         top: 0;
         overflow: auto;
         padding-top: 0;
+        padding-bottom: 0;
         // position: -webkit-sticky;
         // position: sticky;
     }
@@ -25,6 +26,18 @@
             width: 100%;
             display: block;
             margin-top: 20px;
+        }
+        &__top_four{
+            margin: 15px 0;
+            padding: 10px 15px;
+            background: lighten($main-color, 20%);
+            hr{
+                border: 0;
+                height: 1px;
+                width: 100%;
+                margin: 10px 0;
+                background: $black;
+            }
         }
         &__metadata{
             width: 100%;
