--- a/src/styles/components/_flyer.scss
+++ b/src/styles/components/_flyer.scss
@@ -13,6 +13,17 @@
         display: block;
         position: absolute;
     }
+    &__plaza{
+        top: 15px;
+        left: 15px;
+        position: absolute;
+        i{
+            padding: 5px;
+            color: $black;
+            background: #fff;
+            border-radius: 5px;
+        }
+    }
     &__content{
         z-index: 2;
         left: 15px;
@@ -23,11 +34,12 @@
             line-height: 110%;
             margin-bottom: 10px;
         }
+        
         &__description{
             width: 100%;
             display: block;
             overflow: hidden;
-            max-height: 70px;
+            max-height: 43px;
             a>{
                 position: static;
                 display: inline;
@@ -48,7 +60,7 @@
             position: absolute;
             font-family: $font_titles;
             text-transform: capitalize;
-            text-shadow: 0 0 5px rgba(0, 0, 0, 1);
+            text-shadow: 0 0 5px black, 0 0 15px black;
         }
         &__metadata{
             width: 100%;
