--- a/src/styles/components/_flyer.scss
+++ b/src/styles/components/_flyer.scss
@@ -61,10 +61,12 @@
         &__date{
             top: 15px;
             right: 15px;
+            padding: 0 10px;
+            background: #000;
             position: absolute;
             font-family: $font_titles;
             text-transform: capitalize;
-            text-shadow: 0 0 5px black, 0 0 15px black;
+            // text-shadow: 0 0 5px black, 0 0 15px black;
         }
         &__metadata{
             width: 100%;
