--- a/src/styles/components/_event.scss
+++ b/src/styles/components/_event.scss
@@ -106,6 +106,9 @@
     &__carousel{
         width: 100%;
         display: block;
+        .owl-stage{
+            background: black;
+        }
         &__card{
             width: 100%;
             display: block;
