Edit events fixed

--- a/src/styles/components/_flyer.scss
+++ b/src/styles/components/_flyer.scss
@@ -137,6 +137,7 @@
             }
             .flyer__content__date{
                 text-shadow: none;
+                background: none;
             }
             &:before{
                 display: none;
